--- a/README.yaml
+++ b/README.yaml
@@ -57,8 +57,7 @@ references:
 
 # Short description of this project
 description: |-
-  This is `terraform-aws-health-events` project provides all the scaffolding for a typical well-built Cloud Posse module. It's a template repository you can
-  use when creating new repositories.
+  This module creates EventBridge (formerly CloudWatch Events) rules for AWS Personal Health Dashboard Events and an SNS topic. EventBridge will publish messages to this SNS topic, which can be subcribed to using this module as well.
 
 # Introduction to the project
 #introduction: |-
@@ -71,10 +70,12 @@ usage: |-
   For automated tests of the complete example using [bats](https://github.com/bats-core/bats-core) and [Terratest](https://github.com/gruntwork-io/terratest)
   (which tests and deploys the example on AWS), see [test](test).
 
+  Here's how to invoke this module in your projects:
   ```hcl
   module "example" {
-    source = "https://github.com/cloudposse/terraform-aws-health-events.git?ref=master"
-    example = "Hello world!"
+    source = "cloudposse/health-events/aws"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
   }
   ```
 
