--- a/README.yaml
+++ b/README.yaml
@@ -72,10 +72,33 @@ usage: |-
 
   Here's how to invoke this module in your projects:
   ```hcl
-  module "example" {
+  module "monitor_yaml_config" {
+    source  = "cloudposse/config/yaml"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
+    map_config_local_base_path = path.module
+    map_config_paths           = ["catalog/event_rules/*.yaml"]
+
+    context = module.this.context
+  }
+
+  module "health_events" {
     source = "cloudposse/health-events/aws"
     # Cloud Posse recommends pinning every module to a specific version
     # version     = "x.x.x"
+
+    event_rules = module.event_rules_yaml_config.list_configs
+    subscribers = {
+      opsgenie = {
+        protocol               = "https"
+        endpoint               = "https://api.example.com/v1/"
+        endpoint_auto_confirms = true
+        raw_message_delivery   = false
+      }
+    }
+
+    context = module.this.context
   }
   ```
 
