--- a/README.yaml
+++ b/README.yaml
@@ -1,4 +1,3 @@
----
 #
 # This is the canonical configuration for the `README.md`
 # Run `make readme` to rebuild the `README.md`
@@ -24,15 +23,15 @@ github_repo: cloudposse/terraform-aws-health-events
 
 # Badges to display
 badges:
-  - name: "Latest Release"
-    image: "https://img.shields.io/github/release/cloudposse/terraform-aws-health-events.svg"
-    url: "https://github.com/cloudposse/terraform-aws-health-events/releases/latest"
-  - name: "Slack Community"
-    image: "https://slack.cloudposse.com/badge.svg"
-    url: "https://slack.cloudposse.com"
-  - name: "Discourse Forum"
-    image: "https://img.shields.io/discourse/https/ask.sweetops.com/posts.svg"
-    url: "https://ask.sweetops.com/"
+  - name: Latest Release
+    image: https://img.shields.io/github/release/cloudposse/terraform-aws-health-events.svg?style=for-the-badge
+    url: https://github.com/cloudposse/terraform-aws-health-events/releases/latest
+  - name: Last Updated
+    image: https://img.shields.io/github/last-commit/cloudposse/terraform-aws-health-events.svg?style=for-the-badge
+    url: https://github.com/cloudposse/terraform-aws-health-events/commits
+  - name: Slack Community
+    image: https://slack.cloudposse.com/for-the-badge.svg
+    url: https://slack.cloudposse.com
 
 # List any related terraform modules that this module may be used with or that this module depends on.
 related:
@@ -118,6 +117,4 @@ include:
   - "docs/terraform.md"
 
 # Contributors to this project
-contributors:
-  - name: "Yonatan Koren"
-    github: "korenyoni"
+contributors: []
